0.41
 - API updates for any service up to the date of release
 - New API: Textract
 - New API: ManagedBlockchain
 - New API: GroundStation
 - New API: IoTEvents
 - New API: IoTEventsData
 - New API: IoTThingsGraph
 - New API: MediaPackageVod
 - New API: Personalize
 - New API: PersonalizeEvents
 - New API: PersonalizeRuntime

0.40 26 Apr 2019
 - Solve issue #324. Paws won't die when any API returns duplicate requestid headers. IAM has 
   started returning duplicate request id headers, basically rendering old versions of Paws
   unable to call IAM. Issue #324 has instructions for users of older versions of Paws.
 - Paws will not send an HTTP body of '{}' when there are no parameters to send for RestJson services. Some
   services (MQ) were not liking it.
 - Fixed invocation examples of methods in SYNOPSIS when botocore provides example invocations

0.39 11 Feb 2019
 - Paws is now installed with Module::Builder::Tiny, which speeds
   up installation (Grinzz)
 - MojoAsyncCaller is working correctly (leonerd, bork1n)
 - Fix failing tests when AWS_CONFIG_FILE env var is set in the test environment (stevecaldwell77)
 - API updates for any service up to the date of release
 - Fix: SNS CheckIfPhoneNumberIsOptedOut CheckIfPhoneNumberIsOptedOut ListPhoneNumbersOptedOut
        were not working correctly
 - MojoAsyncCaller now sleeps appropiately (leonerd)
 - t/04_credentials.t now works if AWS_CONFIG_FILE is set in the environment (campus-explorer)
 - Don't ship and install paws_make_testcase and xml2yaml scripts (atoomic)
 - unstable API warnings can be silenced by setting PAWS_SILENCE_UNSTABLE_WARNINGS to 1 (meis)
 - paws CLI doesn't add './lib' and './auto-lib' to @INC (atoomic)
 - uninitialized value warnings solved in S3 #282 (slobo)
 - New API: Macie
 - New API: DLM
 - New API: Signer
 - New API: Chime
 - New API: PinpointEmail
 - New API: S3Control
 - New API: PinpointSMSVoice
 - New API: RAM
 - New API: Route53Resolver
 - New API: RDSData
 - New API: Quicksight